# Projecto

./: CMakeLists.txt  README.md  main.c  main_aux.c  main_aux.h  makefile  parser.c  parser.h  soduku_game.c  soduku_game.h  soduku_solver.c  soduku_solver.h  sudoku_board.c  sudoku_board.h  sudoku_commands.c  sudoku_commands.h  sudoku_game.c  sudoku_game.h  sudoku_solver.c  sudoku_solver.h  utils.c  utils.h
engine/: random.c  random.h  sudoku_board.c  sudoku_board.h  sudoku_commands.c  sudoku_commands.h  sudoku_game.c  sudoku_game.h  sudoku_game_operation.c  sudoku_game_operation.h  sudoku_solver.c  sudoku_solver.h  user_interface.c  user_interface.h
engine/commands/: commands.c  commands.h  parser.c  parser.h  sudoku_commands.c  sudoku_commands.h
engine/data_structures/: operation_list.c  operation_list.h  stack.c  stack.h
engine/fs/: sudoku_fs.c  sudoku_fs.h
engine/gurobi/: sudoku_grb.c  sudoku_grb.h  sudoku_var_list.c
engine/random/: random.c  random.h  random_value_chooser.c  random_value_chooser.h
engine/rollback/: operation_list.c  operation_list.h  sudoku_game_operation.c  sudoku_game_operation.h
engine/solver/: backtracking_stack.c  sudoku_solver.c  sudoku_solver.h
engine/solver/backtracking/: backtracking_stack.c  backtracking_stack.h  sudoku_backtracking.c  sudoku_backtracking.h
engine/solver/gurobi/: grb_commands.c  grb_commands.h  grb_processing.c  grb_processing.h  grb_setup.c  grb_setup.h  grb_utils.h  sudoku_grb.c  sudoku_grb.h  sudoku_var_list.c  sudoku_var_list.h
